# udressgpt

./: .gitignore  .pre-commit-config.yaml  2.0  README.md  api_server.py  config2.py  const.py  docker-compose.yml  main.py  project  pyproject.toml  pyvenv.cfg  requiarment.txt  requirements.txt  software_company.py  startup.py
actions/: __init__.py  design_interface.py  implement_ui.py  review_ui.py  write_flutter_code.py  write_flutter_documentation.py  write_flutter_tests.py  write_php_code.py  write_php_documentation.py  write_php_tests.py  write_python_code.py  write_python_documentation.py  write_python_tests.py
config/: config2.yaml
configs/: llm_config.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
logs/: 20250512.txt  20250520.txt  20250521.txt
metagpt/: _compat.py
provider/: __init__.py  base_llm.py  deepseek_api.py  metagpt_api.py  openai_api.py
roles/: __init__.py  flutter_developer.py  php_developer.py  product_manager.py  python_developer.py  role.py  ui_ux_developer.py
tools/: openai_text_to_embedding.py
utils/: flutter_utils.py  token_counter.py
