[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metagpt"
version = "0.1.0"
description = "MetaGPT: A multi-agent framework powered by GPT"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
  "openai>=1.0",
  "requests>=2.25",
  "fire",
  "python-docx",
  # add other dependencies here
]

[project.urls]
Homepage = "https://github.com/r00texploit/udressgpt"
Repository = "https://github.com/r00texploit/udressgpt"
